[project]
name = "tomodachi-testcontainers"
version = "1.2.4"
description = "Collection of Testcontainers, pytest fixtures and test clients for end-to-end/integration testing for Python Tomodachi framework. A great starting point to learn more about Testcontainers and necessity of integration testing."
authors = [{ name = "Filips Nastins", email = "nastinsfilips@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "aiobotocore>=2.4.2,<3",
    "protobuf>=4,<6",
    "pytest>=7.1.2,<10.0.0",
    "pytest-asyncio>=0.24.0,<2.0.0",
    "requests>=2.31.0,<3",
    "shortuuid>=1.0.11,<2",
    "tenacity>=8.2.2,<10.0.0",
    "testcontainers>=4.9.1,<5",
    "types-aiobotocore[dynamodb,iam,lambda,s3,sns,sqs,ssm]>=2.4.2,<3",
]

[project.urls]
Homepage = "https://github.com/filipsnastins/tomodachi-testcontainers"
Repository = "https://github.com/filipsnastins/tomodachi-testcontainers"

[project.optional-dependencies]
db = ["sqlalchemy>=1.3,<3"]
mysql = ["sqlalchemy>=1.3,<3", "pymysql>=1.1.0,<2", "cryptography>=41,<44"]
postgres = ["sqlalchemy>=1.3,<3", "psycopg>=3.1.18,<4"]
sftp = ["asyncssh>=2.13.2,<3"]
wiremock = ["wiremock>=2.6.1,<3"]

[project.entry-points.pytest11]
tomodachi_testcontainers = "tomodachi_testcontainers.fixtures"

[dependency-groups]
dev = [
    "autoflake>=2.1.1,<3",
    "bandit>=1.7.5,<2",
    "black>=24.1.1,<25",
    "colorama>=0.4.6,<0.5",
    "flake8>=7.0.0,<8",
    "flake8-annotations>=2.9.1,<4.0.0",
    "flake8-black>=0.3.6,<0.4",
    "flake8-bugbear>=23.3.12,<25.0.0",
    "flake8-executable>=2.1.3,<3",
    "flake8-isort>=6.1.0,<7",
    "flake8-junit-report>=2.1.0,<3",
    "flake8-literal>=1.3.0,<2",
    "flake8-no-pep420>=2.7.0,<3",
    "flake8-pyproject>=1.2.3,<2",
    "flake8-pytest-style>=2.0.0,<3",
    "flake8-return>=1.2.0,<2",
    "flake8-simplify>=0.21.0,<0.22",
    "flaky>=3.8.1,<4",
    "httpx>=0.25,<0.28",
    "isort>=5.12.0,<6",
    "mypy>=1.4.1,<2",
    "pre-commit>=3.3.3,<5.0.0",
    "pydantic>=2.0.2,<3",
    "pydocstringformatter>=0.7.3,<0.8",
    "pylint[spelling]>=3.0.2,<4",
    "pytest-cov>=4.1,<6.0",
    "pytest-env>=1.0.1,<2",
    "pytest-testdox>=3.1.0,<4",
    "pytest-timeout>=2.3.1,<3",
    "pytest-xdist>=3.5.0,<4",
    "ruff>=0.1.5,<0.7.0",
    "structlog>=23.3,<25.0",
    "tomodachi>=0.27.0,<0.28",
    "types-protobuf>=4.23.0.2,<6.0.0.0",
    "types-requests>=2.31.0.2,<3",
]
docs = [
    "griffe>=1.5.1,<2",
    "griffe-typingdoc>=0.2.7,<0.3",
    "mkdocs-glightbox>=0.4.0,<0.5",
    "mkdocs-material>=9.5.41,<10",
    "mkdocstrings[python]>=0.26.2,<0.27",
    "mkdocstrings-python>=1.12.1,<2",
]

[tool.uv]
default-groups = ["dev", "docs"]
required-version = ">=0.11"

[tool.black]
line-length = 120
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '\.git/|\.mypy_cache/|\.venv/|\.pytest_cache/|\.vscode/|__pycache__/|build/|dist/'

[tool.isort]
profile = "black"
line_length = 120
skip = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".venv",
    ".pytest_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
]

[tool.bandit]
exclude_dirs = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".venv",
    ".pytest_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
]

[tool.flake8]
ignore = [
    "ANN101",
    "ANN401",
    "BLK100",
    "E231",
    "E501",
    "E704",
    "LIT101",
    "PL123",
]
literal-inline-quotes = "double"
literal-multiline-quotes = "double"
exclude = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".venv",
    ".pytest_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
]
extend-exclude = ["tests/clients/proto"]
per-file-ignores = [
    "docs_src/**/*.py:E402",
    "tests/services/test_service_healthcheck.py:E402",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
extend-exclude = ["tests/clients/proto"]

[tool.ruff.lint.extend-per-file-ignores]
"docs_src/**/*.py" = ["E402"]
"tests/services/test_service_healthcheck.py" = ["E402"]

[tool.pydocstringformatter]
write = true
strip-whitespaces = true
split-summary-body = false
numpydoc-section-hyphen-length = false
exclude = [
    "**/.git/**",
    "**/.ruff_cache/**",
    "**/.mypy_cache/**",
    "**/.venv/**",
    "**/.pytest_cache/**",
    "**/.vscode/**",
    "**/__pycache__/**",
    "**/build/**",
    "**/dist/**",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
log_level = "INFO"
testpaths = ["tests"]

asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "strict"

timeout = 300
session_timeout = 900

env = [
    # Set dummy AWS credentials so that we don't accidentally mutate real infrastructure
    "AWS_REGION=us-east-1",
    "AWS_DEFAULT_REGION=us-east-1",
    "AWS_ACCESS_KEY_ID=testing",
    "AWS_SECRET_ACCESS_KEY=testing",
    "AWS_SECURITY_TOKEN=testing",
    "AWS_SESSION_TOKEN=testing",
    # Testcontainers configuration
    "DOCKER_BUILDKIT=1",
    "TESTCONTAINER_DOCKER_NETWORK=tomodachi-testcontainers",
    "TESTCONTAINER_DOCKERFILE_PATH=examples/Dockerfile",
    "TESTCONTAINER_DOCKER_BUILD_CONTEXT=examples",
    "TESTCONTAINER_DOCKER_BUILD_TARGET=test",
    # LocalStack Testcontainer configuration
    "LOCALSTACK_TESTCONTAINER_DISABLE_LOGGING=1",
    # Moto Testcontainer configuration
    "MOTO_TESTCONTAINER_DISABLE_LOGGING=1",
    # WireMock Testcontainer configuration
    "WIREMOCK_TESTCONTAINER_MAPPING_STUBS=tests/containers/test-wiremock-container/mappings",
    "WIREMOCK_TESTCONTAINER_MAPPING_FILES=tests/containers/test-wiremock-container/files",
    "WIREMOCK_TESTCONTAINER_VERBOSE=1",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["src/", "tests/"]
omit = ["tests/clients/proto/*"]

[tool.coverage.paths]
source = ["examples/", "src/", "/app"]

[tool.coverage.report]
omit = ["docs_src/"]
skip_covered = true
show_missing = true
include_namespace_packages = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tomodachi_testcontainers"]
