[project]
name = "tomodachi-testcontainers"
version = "1.2.4"
description = "Collection of Testcontainers, pytest fixtures and test clients for end-to-end/integration testing for Python Tomodachi framework. A great starting point to learn more about Testcontainers and necessity of integration testing."
authors = [{ name = "Filips Nastins", email = "nastinsfilips@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "aiobotocore>=2.4.2,<3",
    "protobuf>=4,<8",
    "pytest>=7.1.2,<10.0.0",
    "pytest-asyncio>=0.24.0,<2.0.0",
    "requests>=2.31.0,<3",
    "shortuuid>=1.0.11,<2",
    "tenacity>=8.2.2,<10.0.0",
    "testcontainers>=4.9.1,<5",
    "types-aiobotocore[dynamodb,iam,lambda,s3,sns,sqs,ssm]>=2.4.2,<3",
]

[project.urls]
Homepage = "https://github.com/filipsnastins/tomodachi-testcontainers"
Repository = "https://github.com/filipsnastins/tomodachi-testcontainers"

[project.optional-dependencies]
db = ["sqlalchemy>=1.3,<3"]
mysql = ["sqlalchemy>=1.3,<3", "pymysql>=1.1.0,<2", "cryptography>=41,<50"]
postgres = ["sqlalchemy>=1.3,<3", "psycopg>=3.1.18,<4"]
sftp = ["asyncssh>=2.13.2,<3"]
wiremock = ["wiremock>=2.6.1,<3"]

[project.entry-points.pytest11]
tomodachi_testcontainers = "tomodachi_testcontainers.fixtures"

[dependency-groups]
dev = [
    "colorama>=0.4.6,<0.5",
    "flaky>=3.8.1,<4",
    "httpx>=0.25,<0.29",
    "mypy>=1.4.1,<3",
    "pre-commit>=3.3.3,<5.0.0",
    "pydantic>=2.0.2,<3",
    "pytest-cov>=4.1,<8.0",
    "pytest-env>=1.0.1,<2",
    "pytest-testdox>=3.1.0,<4",
    "pytest-timeout>=2.3.1,<3",
    "pytest-xdist>=3.5.0,<4",
    "ruff>=0.15.0",
    "structlog>=23.3,<25.0",
    "types-protobuf>=4.23.0.2,<8.0.0.0",
    "types-requests>=2.31.0.2,<3",
]
docs = [
    "griffe>=1.5.1,<3",
    "griffe-typingdoc>=0.2.7,<0.4",
    "mkdocs-glightbox>=0.4.0,<0.6",
    "mkdocs-material>=9.5.41,<10",
    "mkdocstrings[python]>=0.26.2,<2",
    "mkdocstrings-python>=1.12.1,<3",
    "properdocs>=1.6.7,<2",
]

[tool.uv]
default-groups = ["dev", "docs"]
required-version = ">=0.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
extend-exclude = ["tests/clients/proto"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "A002",
    "A003",
    "A004",
    "ANN401",
    "ARG001",
    "ARG002",
    "ARG003",
    "ARG004",
    "ARG005",
    "B904",
    "BLE001",
    "C901",
    "COM812",
    "CPY001",
    "D",
    "DOC201",
    "DOC402",
    "DOC501",
    "DTZ005",
    "E501",
    "EM101",
    "EM102",
    "ERA001",
    "FBT001",
    "FBT002",
    "FBT003",
    "FIX002",
    "G004",
    "ISC001",
    "N818",
    "PGH003",
    "PGH004",
    "PLC0415",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR0917",
    "PLR2004",
    "PLR6301",
    "PLW1508",
    "PLW2901",
    "RUF012",
    "RUF029",
    "RUF043",
    "RUF067",
    "RUF076",
    "S101",
    "S104",
    "S105",
    "S106",
    "S108",
    "S202",
    "S311",
    "S404",
    "S603",
    "SIM117",
    "SLF001",
    "TC001",
    "TC002",
    "TC003",
    "TD002",
    "TD003",
    "TRY003",
    "TRY004",
    "TRY300",
    "TRY301",
    "TRY400",
    "UP007",
]

[tool.ruff.lint.per-file-ignores]
"docs_src/**/*.py" = ["E402", "INP001", "T201"]
"examples/**/*.py" = ["INP001"]
"tests/**/*.py" = ["ANN001", "ANN201", "ANN202", "S105", "S106"]
"tests/services/test_service_healthcheck.py" = ["E402"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
log_level = "INFO"
testpaths = ["tests"]

asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "strict"

timeout = 300
session_timeout = 900

env = [
    # Set dummy AWS credentials so that we don't accidentally mutate real infrastructure
    "AWS_REGION=us-east-1",
    "AWS_DEFAULT_REGION=us-east-1",
    "AWS_ACCESS_KEY_ID=testing",
    "AWS_SECRET_ACCESS_KEY=testing",
    "AWS_SECURITY_TOKEN=testing",
    "AWS_SESSION_TOKEN=testing",
    # Testcontainers configuration
    "DOCKER_BUILDKIT=1",
    "TESTCONTAINER_DOCKER_NETWORK=tomodachi-testcontainers",
    "TESTCONTAINER_DOCKERFILE_PATH=examples/Dockerfile",
    "TESTCONTAINER_DOCKER_BUILD_CONTEXT=examples",
    "TESTCONTAINER_DOCKER_BUILD_TARGET=test",
    # LocalStack Testcontainer configuration
    "LOCALSTACK_TESTCONTAINER_DISABLE_LOGGING=1",
    # Moto Testcontainer configuration
    "MOTO_TESTCONTAINER_DISABLE_LOGGING=1",
    # WireMock Testcontainer configuration
    "WIREMOCK_TESTCONTAINER_MAPPING_STUBS=tests/containers/test-wiremock-container/mappings",
    "WIREMOCK_TESTCONTAINER_MAPPING_FILES=tests/containers/test-wiremock-container/files",
    "WIREMOCK_TESTCONTAINER_VERBOSE=1",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["src/", "tests/"]
omit = ["tests/clients/proto/*"]

[tool.coverage.paths]
source = ["examples/", "src/", "/app"]

[tool.coverage.report]
omit = ["docs_src/"]
skip_covered = true
show_missing = true
include_namespace_packages = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tomodachi_testcontainers"]
