[tool.poetry]
name = "src"
version = "0.0.0"
description = ""
authors = ["Filips Nastins <nastinsfilips@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
fastapi = "^0.115.2"
flask = "^3.0.1"
httpx = "^0.27.2"
structlog = "^24.4.0"
tomodachi = "^0.27.2"
types-aiobotocore = { extras = [
    "dynamodb",
    "s3",
    "sns",
    "sqs",
], version = "^2.5.2" }
uvicorn = "^0.31.0"
uvloop = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
requests = "^2.32.3"
types-requests = "^2.32.0"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
log_level = "INFO"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "strict"
env = [
    # Set dummy AWS credentials so that we don't accidentally mutate real infrastructure
    "AWS_REGION=us-east-1",
    "AWS_DEFAULT_REGION=us-east-1",
    "AWS_ACCESS_KEY_ID=testing",
    "AWS_SECRET_ACCESS_KEY=testing",
    "AWS_SECURITY_TOKEN=testing",
    "AWS_SESSION_TOKEN=testing",
    # Testcontainers configuration
    "DOCKER_BUILDKIT=1",
    "TESTCONTAINER_DOCKER_NETWORK=tomodachi-testcontainers",
    "TESTCONTAINER_DOCKERFILE_PATH=docs_src/Dockerfile",
    "TESTCONTAINER_DOCKER_BUILD_CONTEXT=docs_src",
    # WireMock Testcontainer configuration
    "WIREMOCK_TESTCONTAINER_VERBOSE=1",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
