[project]
name = "src"
version = "0.0.0"
description = ""
authors = [{ name = "Filips Nastins", email = "nastinsfilips@gmail.com" }]
requires-python = ">=3.13,<4"
dependencies = [
    "django>=5.1.8,<7",
    "fastapi>=0.115.12,<0.200",
    "flask>=3.1.3,<4",
    "httpx>=0.27.2,<0.29",
    "structlog>=24.4.0,<25",
    "tomodachi>=0.28.4,<0.29",
    "types-aiobotocore[dynamodb,s3,sns,sqs]>=3,<4",
    "uvicorn>=0.31.0,<0.50",
    "uvloop>=0.21.0,<0.23",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<10",
    "pytest-asyncio>=0.26.0,<2.0.0",
    "requests>=2.32.3,<3",
    "types-requests>=2.32.0,<3",
]

[tool.uv]
package = false

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.pytest.ini_options]
log_level = "INFO"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "strict"
env = [
    # Set dummy AWS credentials so that we don't accidentally mutate real infrastructure
    "AWS_REGION=us-east-1",
    "AWS_DEFAULT_REGION=us-east-1",
    "AWS_ACCESS_KEY_ID=testing",
    "AWS_SECRET_ACCESS_KEY=testing",
    "AWS_SECURITY_TOKEN=testing",
    "AWS_SESSION_TOKEN=testing",
    # Testcontainers configuration
    "DOCKER_BUILDKIT=1",
    "TESTCONTAINER_DOCKER_NETWORK=tomodachi-testcontainers",
    "TESTCONTAINER_DOCKERFILE_PATH=docs_src/Dockerfile",
    "TESTCONTAINER_DOCKER_BUILD_CONTEXT=docs_src",
    # WireMock Testcontainer configuration
    "WIREMOCK_TESTCONTAINER_VERBOSE=1",
]
