[project]
name = "src"
version = "0.0.0"
description = ""
authors = [{ name = "Filips Nastins", email = "nastinsfilips@gmail.com" }]
requires-python = ">=3.13,<4"
dependencies = [
    "asyncssh>=2.17.0,<3",
    "pydantic>=2.9.2,<3",
    "structlog>=24.4.0,<25",
    "tomodachi>=0.27.2,<0.28",
    "types-aiobotocore[dynamodb,s3,sns,sqs]>=2.5.2,<3",
    "uvloop>=0.21.0,<0.22",
]

[dependency-groups]
dev = ["black>=24.8.0,<25", "isort>=5.12.0,<6"]
test = ["debugpy>=1.8.6,<2", "pytest-cov>=5.0.0,<6"]

[tool.uv]
package = false

[tool.black]
line-length = 120
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/"]
