[project]
name = "src"
version = "0.0.0"
description = ""
authors = [{ name = "Filips Nastins", email = "nastinsfilips@gmail.com" }]
requires-python = ">=3.13,<4"
dependencies = [
    "asyncssh>=2.17.0,<3",
    "pydantic>=2.9.2,<3",
    "structlog>=24.4.0,<25",
    "tomodachi>=0.27.2,<0.29",
    "types-aiobotocore[dynamodb,s3,sns,sqs]>=2.5.2,<3",
    "uvloop>=0.21.0,<0.23",
]

[dependency-groups]
dev = []
test = ["debugpy>=1.8.6,<2", "pytest-cov>=7.1.0,<8"]

[tool.uv]
package = false

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/"]
