[project]
name = "src"
version = "0.0.0"
description = ""
authors = [{ name = "Filips Nastins", email = "nastinsfilips@gmail.com" }]
requires-python = ">=3.13,<4"
dependencies = [
    "asyncssh>=2.23.1,<3",
    "pydantic>=2.13.4,<3",
    "structlog>=26.1.0,<27",
    "tomodachi>=0.28.4,<0.29",
    "types-aiobotocore[dynamodb,s3,sns,sqs]>=3.7.0,<4",
    "uvloop>=0.21.0,<0.23",
]

[dependency-groups]
dev = []
test = ["debugpy>=1.8.21,<2", "pytest-cov>=7.1.0,<8"]

[tool.uv]
package = false

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/"]
